use_goma = false                  # Googlers only.
is_debug = false                  # Enable debugging features.
pdf_use_skia = false              # Set true to enable experimental skia backend.

pdf_is_standalone = true          # Set for a non-embedded build.
is_component_build = false        # Disable component build (must be false)
clang_use_chrome_plugins = false  # Currently must be false.
use_sysroot = false               # Currently must be false on Linux.

pdf_enable_xfa = false            # Set false to remove XFA support (implies JS support).
pdf_enable_v8 = false             # Set false to remove Javascript support.
is_clang = false                  # Compile with gcc
is_desktop_linux = false
